gateway-api/host-based-routing/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-host-based
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment-host-based # Deployment searches for the pods by this label selector
  template:
    metadata:
      labels:
        app: frontend-deployment-host-based #labels assigned to the pods created by this deployment
    spec:
      containers:
        - image: hashicorp/http-echo
          name: frontend-deployment-host-based
          args:
            - "-text=Frontend Deployment Host Based"
