gateway-api/host-based-routing/gateway-api.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api-host-based
spec:
  gatewayClassName: nginx
  listeners:
    # HTTP Listener
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    # HTTPS Listener
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-cert

    # - name: api-http
    #   hostname: api.local
    #   protocol: HTTP
    #   port: 80

    # - name: api-https
    #   hostname: api.local
    #   protocol: HTTPS
    #   port: 443

    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: backend-api-cert
