gateway-api/host-based-routing/backend-host-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route-host-based
spec:
  parentRefs:
    - name: gateway-api-host-based
      sectionName: http

    - name: gateway-api-host-based
      sectionName: https

  hostnames:
    - "api.local"

  rules:
    - backendRefs:
        - name: backend
          port: 5678
