gateway-api/host-based-routing/frontend-host-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route-host-based
spec:
  parentRefs:
    - name: gateway-api-host-based
      sectionName: http

    - name: gateway-api-host-based
      sectionName: https

  hostnames:
    - "shop.local"

  rules:
    - backendRefs:
        - name: frontend
          port: 5678
